--- a/oche_legends_website.html
+++ b/oche_legends_website.html
@@ -666,7 +666,7 @@
             <p>These Terms shall be governed by and construed in accordance with the laws of [Your Jurisdiction], without regard to its conflict of law provisions. Any disputes arising from these Terms or the Game shall be resolved in the courts of [Your Jurisdiction].</p>
 
             <h3>16. Dispute Resolution</h3>
-            <p>In the event of any dispute arising from these Terms or your use of the Game, you agree to first attempt to resolve the dispute informally by contacting us at <a href="mailto:support@ochelegends.com">support@ochelegends.com</a>.</p>
+            <p>In the event of any dispute arising from these Terms or your use of the Game, you agree to first attempt to resolve the dispute informally by contacting us at <a href="mailto:generalenquiries@ochelegends.co.uk">generalenquiries@ochelegends.co.uk</a>.</p>
 
             <h3>17. Severability</h3>
             <p>If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions will remain in full force and effect.</p>
@@ -677,7 +677,7 @@
             <h3>19. Contact Information</h3>
             <p>If you have any questions about these Terms, please contact us at:</p>
             <div class="highlight-box">
-                <p><strong>Email:</strong> <a href="mailto:support@ochelegends.com">support@ochelegends.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:generalenquiries@ochelegends.co.uk">generalenquiries@ochelegends.co.uk</a></p>
             </div>
 
             <p>By using Oche Legends, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service.</p>
@@ -816,7 +816,7 @@
             <p>You can access and update your account information at any time through the Game's settings.</p>
 
             <h4>6.2 Deletion</h4>
-            <p>You may request deletion of your account and personal information by contacting us at <a href="mailto:privacy@ochelegends.com">privacy@ochelegends.com</a>. Please note that some information may be retained as required by law or for legitimate business purposes.</p>
+            <p>You may request deletion of your account and personal information by contacting us at <a href="mailto:generalenquiries@ochelegends.co.uk">generalenquiries@ochelegends.co.uk</a>. Please note that some information may be retained as required by law or for legitimate business purposes.</p>
 
             <h4>6.3 Opt-Out of Communications</h4>
             <p>You can opt out of promotional emails by following the unsubscribe instructions in those emails or by adjusting your communication preferences in the Game settings. Please note that you will continue to receive essential account-related communications.</p>
@@ -828,12 +828,12 @@
             <p>Where we rely on your consent to process your information, you have the right to withdraw that consent at any time.</p>
 
             <div class="highlight-box">
-                <p>To exercise any of these rights, please contact us at <a href="mailto:privacy@ochelegends.com">privacy@ochelegends.com</a>.</p>
+                <p>To exercise any of these rights, please contact us at <a href="mailto:generalenquiries@ochelegends.co.uk">generalenquiries@ochelegends.co.uk</a>.</p>
             </div>
 
             <h3>7. Children's Privacy</h3>
             <p>Oche Legends is not intended for children under the age of 13 (or the minimum age in your country). We do not knowingly collect personal information from children under 13. If we become aware that we have collected personal information from a child under 13 without parental consent, we will take steps to delete that information promptly.</p>
-            <p>If you believe we have collected information from a child under 13, please contact us immediately at <a href="mailto:privacy@ochelegends.com">privacy@ochelegends.com</a>.</p>
+            <p>If you believe we have collected information from a child under 13, please contact us immediately at <a href="mailto:generalenquiries@ochelegends.co.uk">generalenquiries@ochelegends.co.uk</a>.</p>
 
             <h3>8. International Data Transfers</h3>
             <p>Your information may be transferred to and processed in countries other than your country of residence. These countries may have data protection laws that differ from the laws of your country. We take measures to ensure that your information receives an adequate level of protection in the jurisdictions in which we process it.</p>
@@ -870,7 +870,7 @@
             <h3>13. Contact Us</h3>
             <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us at:</p>
             <div class="highlight-box">
-                <p><strong>Email:</strong> <a href="mailto:privacy@ochelegends.com">privacy@ochelegends.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:generalenquiries@ochelegends.co.uk">generalenquiries@ochelegends.co.uk</a></p>
                 <p><strong>Subject Line:</strong> Privacy Inquiry - Oche Legends</p>
             </div>
 
@@ -897,8 +897,8 @@
             </div>
             <div class="footer-section">
                 <h4>Support</h4>
-                <a href="mailto:support@ochelegends.com">Support</a>
-                <a href="mailto:privacy@ochelegends.com">Privacy Inquiries</a>
+                <a href="mailto:generalenquiries@ochelegends.co.uk">Support</a>
+                <a href="mailto:generalenquiries@ochelegends.co.uk">Privacy Inquiries</a>
                 <a href="#">FAQ</a>
             </div>
             <div class="footer-section">
