--- a/reset-password/index.html
+++ b/reset-password/index.html
@@ -99,7 +99,7 @@
         return;
       }
       
-      const deepLink = 'vibecode://reset-password?token=' + encodeURIComponent(token);
+      const deepLink = 'ochelegends://reset-password?token=' + encodeURIComponent(token);
       
       // Set the button href
       document.getElementById('openAppBtn').href = deepLink;
